[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Battle/Attacks/Attacks.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Battle/HUD/HealthBar/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Battle/HUD/Buttons/Buttons.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Battle/Player/PlayerHeart.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Battle/Enemy/Sans/Sans.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Battle/Border/Border.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Camera/Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/Mars Needs Cunnilingus (Default).tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/Battle/Attacks/Bullets.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Battle/Battle.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Battle/Enemy/Dialogue/Dialogue.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Battle/Enemy/Enemy.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Battle/HUD/Hud.gd" type="Script" id=13]
[ext_resource path="res://Shaders/AttackMask.gdshader" type="Shader" id=14]
[ext_resource path="res://Sprites/Battle/BorderMask.png" type="Texture" id=15]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 14 )

[node name="Battle" type="Node2D"]
script = ExtResource( 10 )

[node name="Background" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -1.00012
margin_right = 639.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 320, 240 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Enemy" type="CanvasLayer" parent="."]
follow_viewport_enable = true
script = ExtResource( 12 )

[node name="Sans" parent="Enemy" instance=ExtResource( 5 )]
position = Vector2( 320, 130 )

[node name="Dialogue" type="Node2D" parent="Enemy"]
script = ExtResource( 11 )

[node name="Hud" type="CanvasLayer" parent="."]
layer = 3
follow_viewport_enable = true
script = ExtResource( 13 )

[node name="Buttons" parent="Hud" instance=ExtResource( 3 )]
position = Vector2( 32, 432 )

[node name="HealthBar" parent="Hud" instance=ExtResource( 2 )]
position = Vector2( 220, 400 )

[node name="Name" type="RichTextLabel" parent="Hud"]
margin_left = 30.0
margin_top = 400.0
margin_right = 222.0
margin_bottom = 421.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Chara   LV 19"
text = "Chara   LV 19"
scroll_active = false

[node name="HeartLayer" type="CanvasLayer" parent="."]
layer = 4
follow_viewport_enable = true

[node name="PlayerHeart" parent="HeartLayer" instance=ExtResource( 4 )]
position = Vector2( 320, 320 )

[node name="Attacks" type="CanvasLayer" parent="."]
layer = 5
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="BackBufferCopy" type="BackBufferCopy" parent="Attacks"]
copy_mode = 2
rect = Rect2( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mask" type="Node2D" parent="Attacks/BackBufferCopy"]
visible = false
material = SubResource( 1 )

[node name="Top" type="Sprite" parent="Attacks/BackBufferCopy/Mask"]
use_parent_material = true
position = Vector2( 32, 250 )
scale = Vector2( 175, 175 )
texture = ExtResource( 15 )

[node name="Bottom" type="Sprite" parent="Attacks/BackBufferCopy/Mask"]
use_parent_material = true
position = Vector2( 607, 390 )
scale = Vector2( 175, 175 )
texture = ExtResource( 15 )
flip_h = true
flip_v = true

[node name="Bullets" type="Node" parent="Attacks"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="Attacks"]

[node name="BorderLayer" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enable = true

[node name="Border" parent="BorderLayer" instance=ExtResource( 6 )]

[node name="Overlay" type="CanvasLayer" parent="."]
layer = 7

[node name="BlackScreen" type="ColorRect" parent="Overlay"]
visible = false
margin_right = 639.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade" type="ColorRect" parent="Overlay"]
visible = false
margin_right = 639.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 1 )

[node name="Camera" parent="." instance=ExtResource( 7 )]

[node name="Tween" type="Tween" parent="."]
